[package]
name = "git-branch-picker"
version = "0.2.0"
edition = "2021"
description = "Interactive git branch creator with frequency-based sorting"

[[bin]]
name = "gp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
git2 = "0.19"
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
